# BALEZ

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  all.bash
plugins/BALEZverb/: DistrhoPluginInfo.h  Makefile  balez_verb_plugin.cc  balez_verb_ui.cc
src/BALEZ/: BALEZconstants.h  BALEZdial.cc  BALEZdial.h  BALEZdial_bar.cc  BALEZfooter.cc  BALEZfooter.h  BALEZheader.cc  BALEZheader.h  BALEZprocessor_base.cc  CMakeLists.txt
src/BALEZverb/: BALEZdial.cc  BALEZdial.h  BALEZdial_bar.cc  BALEZdial_bar.h  BALEZprocessor_base.cc  BALEZprocessor_base.h  BALEZverb_editor.cc  BALEZverb_editor.h  BALEZverb_processor.cc  BALEZverb_processor.h  CMakeLists.txt
